genereate start scripts